# LuaTemplateLibrary

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LuaTemplateLibrary.sln  README.md  coverage.bat
Docs/: Doxyfile
Docs/html/: _c_state_8hpp_source.html  _class_8hpp_source.html  _class_constructor_8hpp_source.html  _exception_8hpp_source.html  _func_arguments_8hpp_source.html  _func_utils_8hpp_source.html  _function_8hpp_source.html  _internal_8hpp_source.html  _l_t_l_8hpp_source.html  _l_t_l_config_8hpp_source.html  _libs_8hpp_source.html  _lua_aux_8hpp_source.html  _lua_functions_8hpp_source.html  _lua_state_8hpp_source.html  _lua_types_8hpp.html  _lua_types_8hpp_source.html  _property_8hpp.html  _property_8hpp_source.html  _ref_8hpp_source.html  _ref_object_8hpp_source.html  _s_t_d_containers_8hpp_source.html  _stack_object_8hpp_source.html  _state_8hpp_source.html  _types_8hpp_source.html  _user_data_8hpp_source.html  annotated.html  class_l_t_l_1_1_c_state-members.html  class_l_t_l_1_1_c_state.html  class_l_t_l_1_1_context_ref-members.html  class_l_t_l_1_1_context_ref.html  class_l_t_l_1_1_exception-members.html  class_l_t_l_1_1_exception.html  class_l_t_l_1_1_lib-members.html  class_l_t_l_1_1_lib.html  class_l_t_l_1_1_method-members.html  class_l_t_l_1_1_method.html  class_l_t_l_1_1_method_3_01_c_00_01fn_00_01_t_return_07_t_args_8_8_8_08_4-members.html  class_l_t_l_1_1_method_3_01_c_00_01fn_00_01_t_return_07_t_args_8_8_8_08_4.html  class_l_t_l_1_1_method_3_01fn_00_01_t_return_07_t_args_8_8_8_08_4-members.html  class_l_t_l_1_1_method_3_01fn_00_01_t_return_07_t_args_8_8_8_08_4.html  (+314 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+12 more)
Docs/latex/: _c_state_8hpp_source.tex  _class_8hpp_source.tex  _class_constructor_8hpp_source.tex  _exception_8hpp_source.tex  _func_arguments_8hpp_source.tex  _func_utils_8hpp_source.tex  _function_8hpp_source.tex  _internal_8hpp_source.tex  _l_t_l_8hpp_source.tex  _l_t_l_config_8hpp_source.tex  _libs_8hpp_source.tex  _lua_aux_8hpp_source.tex  _lua_functions_8hpp_source.tex  _lua_state_8hpp_source.tex  _lua_types_8hpp.tex  _lua_types_8hpp_source.tex  _property_8hpp.tex  _property_8hpp_source.tex  _ref_8hpp_source.tex  _ref_object_8hpp_source.tex  _s_t_d_containers_8hpp_source.tex  _stack_object_8hpp_source.tex  _state_8hpp_source.tex  _types_8hpp_source.tex  _user_data_8hpp_source.tex  annotated.tex  class_l_t_l_1_1_c_state.tex  class_l_t_l_1_1_context_ref.tex  class_l_t_l_1_1_exception.eps  class_l_t_l_1_1_exception.tex  class_l_t_l_1_1_lib.tex  class_l_t_l_1_1_method.eps  class_l_t_l_1_1_method.tex  class_l_t_l_1_1_method_3_01_c_00_01fn_00_01_t_return_07_t_args_8_8_8_08_4.eps  class_l_t_l_1_1_method_3_01_c_00_01fn_00_01_t_return_07_t_args_8_8_8_08_4.tex  class_l_t_l_1_1_method_3_01fn_00_01_t_return_07_t_args_8_8_8_08_4.eps  class_l_t_l_1_1_method_3_01fn_00_01_t_return_07_t_args_8_8_8_08_4.tex  class_l_t_l_1_1_ref.tex  class_l_t_l_1_1_ref_object.eps  class_l_t_l_1_1_ref_object.tex  (+278 more)
LTL/: CMakeLists.txt  main.cpp  main.lua
LuaTemplateLibrary/: FuncArguments.hpp  FuncTraits.hpp  LuaAux.hpp  LuaClass.hpp  LuaFunctions.hpp  LuaState.hpp  LuaTemplateLibrary.vcxproj  LuaTemplateLibrary.vcxproj.filters  LuaTypes.hpp  RefObject.hpp  Tests.cpp  main.cpp  main.lua
Source/: CMakeLists.txt
Source/LuaTemplateLibrary/: CState.hpp  Class.hpp  ClassConstructor.hpp  Exception.hpp  FuncArguments.hpp  FuncUtils.hpp  Function.hpp  Internal.hpp  LTL.hpp  LTLConfig.hpp  Libs.hpp  LuaAux.hpp  LuaFunctions.hpp  LuaState.hpp  LuaTypes.hpp  Property.hpp  Ref.hpp  RefObject.hpp  STDContainers.hpp  StackObject.hpp  State.hpp  Types.hpp  UserData.hpp
Tests/: CMakeLists.txt  Main.cpp  main.lua
Tests/Lua/: LuaLibrary.h  lua.hpp
Tests/LuaJIT/: LuaLibrary.h
Tests/Source/: Exception.cpp  Inheritance.cpp  Libs.cpp  Main.cpp  Misc.cpp  RefObject.cpp  STL.cpp  Stack.cpp  State.cpp  TestBase.hpp  Types.cpp  UserData.cpp
